Backport upgrade to GeoServer 2.25.3 and geonode OAuth2 support